Fixed scrollbar, fixes #771

--- a/core/app/assets/stylesheets/base/topbar/notifications.css.less
+++ b/core/app/assets/stylesheets/base/topbar/notifications.css.less
@@ -46,7 +46,7 @@
     width: 300px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
     max-height: 500px;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
 
     li {
